fixed the input box spacing

--- a/css/style.css
+++ b/css/style.css
@@ -293,8 +293,4 @@ form input {
         margin-left: 1em;
     }
 
-    form input {
-        width: 13em;
-        margin-right: 0.5em;
-    }
 } 
